--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.1",
     "react-i18next": "^11.8.10",
     "react-native": "0.64.0",
+    "react-native-drop-shadow": "^0.0.2",
     "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "^2.0.2",
