--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-drop-shadow": "^0.0.2",
     "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-localize": "^2.0.2",
     "react-native-modal": "^11.7.0",
     "react-native-progress": "^4.1.2",
