--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-smtp-mailer": "^1.2.5",
     "react-native-splash-screen": "^3.2.0",
     "react-native-text-input-mask": "^3.1.3",
     "react-redux": "^7.2.2",
